[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{ name = "Pushikoo" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["pydantic"]
description = "Adapter interface definitions for Pushikoo"
name = "pushikoo-interface"
readme = "README.md"
requires-python = ">=3.6"
version = "0.0.1"

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "pytest", "pre-commit"]
build = ["build"]

[project.urls]
"Homepage" = "https://github.com/Pushikoo/pushikoo-interface"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.isort]
profile = "black"

[tool.setuptools.package-dir]
"" = "src"
