[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
authors = [{ name = "Pushikoo" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["pydantic"]
description = "Adapter interface definitions for Pushikoo"
name = "pushikoo-interface"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ['version']

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.urls]
"Homepage" = "https://github.com/Pushikoo/pushikoo-interface"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/.vscode", "/uv.lock", "/.gitignore"]

[tool.hatch.version]
source = "vcs"
